# NRFDemo

./: CMakeLists.txt
inc/: NRF24.h
src/: NRF24.cpp  main.cpp
